tests/baselines/reference/decoratorOnClass8.errors.txt
tests/cases/conformance/decorators/class/decoratorOnClass8.ts(3,1): error TS2322: Type '(target: Function, paramIndex: number) => void' is not assignable to type 'ClassAnnotation'.


==== tests/cases/conformance/decorators/class/decoratorOnClass8.ts (1 errors) ====
    declare function dec(): (target: Function, paramIndex: number) => void;
    
    @dec()
    ~~~~~~
!!! error TS2322: Type '(target: Function, paramIndex: number) => void' is not assignable to type 'ClassAnnotation'.
    class C {
    }